src/main/webapp/style.css
#help-near-me-content,
#registration-content,
#organizations-content {
  font-family: 'Courier New', Courier, monospace;
  color: #666666;
  display: flex;
  flex-direction: column;
}

#help-near-me-content a,
#organizations-content a {
  color: #666666;
  text-decoration: none;
  border-bottom: 3px solid transparent;
  margin: 0 20px;
}

#help-near-me-content a:hover,
#organizations-content a:hover {
  border-bottom: 3px solid #666666;
}
 
#site-title {
  display: flex;
  margin-top: 1%;
  justify-content: space-between;
  font-size: 36px;
}

#nav-bar {
  display: flex;
  justify-content: center;
  font-size: 28px;
  margin: 1% 0 2% 0;
}

#site-title {
  justify-content: center;
  margin-bottom: 10px;
}

#zipcode-form {
  display: flex;
  justify-content: center;
  margin: 40px 50px 20px 50px;
}

#maintainer-email-entry,
#zipcode-entry {
  width: 20%;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

#zipcode-label {
  margin: auto 2px auto 0;
  font-size: 20px;
}

#filter-input-area {
  margin: 3% auto;
  height: 30px;
}

.gray-button {
  border: 1px solid #ccc;
  background-color: #A9A9A9;
  border-radius: 4px;
  font-family:'Courier New', Courier, monospace;
  color: #ffffff;
  font-size: 15px;
  cursor: pointer;
  width: 100px;
  margin-left: 10px;
  padding: 5px 20px;
}

#filter-datalist {
  float: right;
}

#organization-list {
  margin: 0 auto;

  height: 495px;
  overflow-y: scroll;
}

.organization {
  display: flex;
  justify-content: center;
  margin: 0px 10px 20px 10px;
  border-radius: 15px;
  border: 2px solid #000000;
  padding: 20px;
  cursor: pointer;
}

.organization-name,
.organization-popup-name {
  font-size: 30px;
}

#search-area,
#all-organizations {
  display: flex;
  justify-content: space-around;
}

#organization-popup-area {
  width: 50%;
  font-size: 20px;
  background-color: #ffffff;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 40px 20px 10px 20px;
}

.organization-popup-name {
  margin: 2% auto;
}

.organization-popup-phone,
.organization-popup-address,
.organization-popup-zipcode,
.organization-popup-hours,
.organization-popup-email,
.organization-popup-url-link,
.organization-popup-description {
  margin: 2% 0;
}

.hide-popup,
.hide-edit-modal {
  display: none;
}

.show-popup,
.show-edit-modal {
  display: block;
}

.popup-close-button {
  cursor: pointer;
}

#add-maintainer-label {
  cursor: pointer;
}

#registration-form-header{ 
  display: flex;
  margin: 1% auto 2% auto;
  justify-content: space-between;
  font-size: 30px;
}

#registration-form-area {
  width: 60%;
  margin: 0 auto;
}

.registration-entry {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

.edit-entry {
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
}

#edit-form-area {
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgba(0,0,0,0.4);
}

#edit-form-area-content {
  display: flex;
  flex-direction: column;
  background-color: #fefefe;
  margin: 10px auto;
  padding: 20px;
  border: 1px solid #888;
  width: 70%;
}

#add-maintainer-email-form {
  display: flex;
  flex-flow: row nowrap;
}

.filter-holder {
  overflow: hidden;
  padding-bottom: 10px;
}

.filter-tag-area {
  display: flex;
  justify-content: space-around;
  border: 3px solid rgb(121, 121, 121);
  background-color: rgba(216, 216, 216, 0.8);
  border-radius: 10px;
  resize: horizontal;
  float:left;
  white-space: nowrap;
  margin-left: 10px;
  padding: 5px 20px;
}

.filter-tag-label {
  font-family:'Courier New', Courier, monospace;
  color: rgb(18, 16, 13);
  font-size: 15px;
}

.filter-tag-close {
  cursor:pointer;
  font-size: 10px;
  float:right;
  color: rgb(18, 16, 13);
  padding: 2px;
  border: 2px solid #ccc;
  border-radius: 50%
}

#no-results-found {
  display: flex;
  justify-content: center;
  color: rgb(109, 101, 101);
  font-size: 20px;
}

.add-maintainer-popup-modal-background {
  display: flex;
  justify-content: center;
  /* background-color: white; */
  z-index: 1;
  background-color: rgba(0,0,0,0.4);
  position: absolute;

  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

#add-maintainer-popup-modal {
  margin: auto;
  padding: 10px;
  background-color: white;
  background-clip: content-box;
  box-shadow: inset 0 0 0 10px white;
}

